RESOLVED FIXED169659
Activate release libwebrtc logging when WebRTC log channel is on
https://bugs.webkit.org/show_bug.cgi?id=169659
Summary Activate release libwebrtc logging when WebRTC log channel is on
youenn fablet
Reported 2017-03-14 21:47:22 PDT
Activate release libwebtc logging when WebRTC log channel is on
Attachments
Patch (1.58 KB, patch)
2017-03-14 21:48 PDT, youenn fablet
no flags
Patch (1.58 KB, patch)
2017-03-14 21:49 PDT, youenn fablet
no flags
Patch (1.59 KB, patch)
2017-03-14 21:52 PDT, youenn fablet
no flags
Patch for landing (1.54 KB, patch)
2017-03-15 10:46 PDT, youenn fablet
no flags
Patch (1.61 KB, patch)
2017-03-27 11:06 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-03-14 21:48:03 PDT
youenn fablet
Comment 2 2017-03-14 21:49:01 PDT
youenn fablet
Comment 3 2017-03-14 21:52:50 PDT
youenn fablet
Comment 4 2017-03-15 10:46:29 PDT
Created attachment 304515 [details] Patch for landing
WebKit Commit Bot
Comment 5 2017-03-15 10:48:49 PDT
Comment on attachment 304515 [details] Patch for landing Rejecting attachment 304515 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'build', '--no-clean', '--no-update', '--build-style=release', '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:93:9: error: use of undeclared identifier 'LogWebRTC' if (LogWebRTC.state != WTFLogChannelOn) ^ 1 error generated. ** BUILD FAILED ** The following build commands failed: CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/LibWebRTCProvider.o platform/mediastream/libwebrtc/LibWebRTCProvider.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (1 failure) Full output: http://webkit-queues.webkit.org/results/3331607
youenn fablet
Comment 6 2017-03-16 14:49:32 PDT
*** Bug 169557 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 7 2017-03-27 11:06:11 PDT
WebKit Commit Bot
Comment 8 2017-03-27 17:32:59 PDT
Comment on attachment 305486 [details] Patch Clearing flags on attachment: 305486 Committed r214445: <http://trac.webkit.org/changeset/214445>
WebKit Commit Bot
Comment 9 2017-03-27 17:33:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.