Activate release libwebrtc logging when WebRTC log channel is on https://bugs.webkit.org/show_bug.cgi?id=169659

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-27
Reviewed by Alex Christensen.

* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::initializePeerConnectionFactoryAndThreads):

Canonical link: https://commits.webkit.org/187070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214445 268f45cc-cd09-0410-ab3c-d52691b4dbfc